# type_enum

./: Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/ui/: duplicate_types.rs  duplicate_types.stderr
